2004-04-02  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service.pl.in, services-conf.in: added --set for gentoo init,
	  all the gentoo modifications in the services tool has been 
	  made with collaboration from Eduardo Garcia Cebollero 
	  <kiwnix@yahoo.es>

2004-04-02  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* service-list.pl.in: replaced the forbidden services hash with
	  a forbidden services list. added regexp search capabilities to 
	  such list. Added some gentoo forbidden services too
	* service.pl.in: added gentoo support for reading config, 
	  guessing a service status and running/stopping a service
	* services-conf.in: added support for gentoo

2004-03-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* platform.pl.in: d'oh! added Mandrake 9.2 to $PLATFORM_INFO

2004-03-29  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in, network-conf.in: added initial support for gentoo
	* parse.pl.in (gst_parse_sh_re): added
	* replace.pl.in (gst_replace_sh_re): added

2004-03-29  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in (gst_network_slackware91_ifaces_get_existing): little
	  improvement when parsing unknown interfaces

2004-03-27  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* parse.pl.in: little parse improvement, now it's able to parse things
	  like "%one_tag%-%other_tag%"
	* network.pl.in: (gst_network_suse70_ppp_iface_active): removed STDERR
	  output. (gst_network_route_set_default_gw): fixed default gw setting.
	  Various other slackware related fixings, now ppp ifaces should work
	  like a charm

2004-03-25  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-19  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>

	* configure.in (ALL_LINGUAS): Added "pt_BR" (Brazilian Portuguese).

2004-03-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* replace.pl.in: (gst_replace_chat): added the possibility of not